# phyml

./: .gitignore  .travis.yml  1734452711_evolve_data.txt  1734452711_evolve_tree.txt  1734452747_evolve_data.txt  1734452747_evolve_tree.txt  1734452775_evolve_data.txt  1734452775_evolve_tree.txt  1734452817_evolve_data.txt  1734452817_evolve_tree.txt  1734452838_evolve_data.txt  1734452838_evolve_tree.txt  1734452866_evolve_data.txt  1734452866_evolve_tree.txt  1734452910_evolve_data.txt  1734452910_evolve_tree.txt  1734453018_evolve_data.txt  1734453018_evolve_tree.txt  1734453061_evolve_data.txt  1734453061_evolve_tree.txt  1734509025_evolve_data.txt  1734509025_evolve_tree.txt  1743429139_evolve_data.txt  1743429139_evolve_tree.txt  1743429168_evolve_data.txt  1743429168_evolve_tree.txt  1743429184_evolve_data.txt  1743429184_evolve_tree.txt  1743493514_evolve_data.txt  1743493514_evolve_tree.txt  1743493514_sim_ibm_config.xml  1743493514_sim_iou_config.xml  1743493514_sim_iwn_config.xml  1743493514_sim_rrw_config.xml  1743495924_evolve_data.txt  1743495924_evolve_tree.txt  1743495967_evolve_data.txt  1743495967_evolve_tree.txt  1743496100_evolve_data.txt  1743496100_evolve_tree.txt  (+40 more)
doc/: Makefile  Makefile.am  Makefile.in  naturemag.bst  phyml-manual.aux  phyml-manual.bbl  phyml-manual.blg  phyml-manual.fdb_latexmk  phyml-manual.fls  phyml-manual.idx  phyml-manual.ilg  phyml-manual.ind  phyml-manual.tex  phyml-manual.toc  ref.bib
src/: 10000_evolve_data.txt  10000_evolve_tree.txt  1000_evolve_data.txt  1000_evolve_data.txt_phyml_stats.txt  1000_evolve_data.txt_phyml_tree.txt  1000_evolve_tree.txt  100_evolve_data.txt  100_evolve_data.txt_phyml_stats.txt  100_evolve_data.txt_phyml_tree.txt  100_evolve_tree.txt  10_evolve_data.txt  10_evolve_data.txt_phyml_stats.txt  10_evolve_data.txt_phyml_stats_GTR.txt  10_evolve_data.txt_phyml_stats_GTR_10.txt  10_evolve_data.txt_phyml_stats_GTR_5.txt  10_evolve_data.txt_phyml_stats_JC69.txt  10_evolve_data.txt_phyml_stats_JC69_10.txt  10_evolve_data.txt_phyml_stats_JC69_5.txt  10_evolve_data.txt_phyml_tree.txt  10_evolve_data.txt_phyml_tree_GTR.txt  10_evolve_data.txt_phyml_tree_GTR_10.txt  10_evolve_data.txt_phyml_tree_GTR_5.txt  10_evolve_data.txt_phyml_tree_JC69.txt  10_evolve_data.txt_phyml_tree_JC69_10.txt  10_evolve_data.txt_phyml_tree_JC69_5.txt  10_evolve_tree.txt  1733913791_evolve_data.txt  1733913887_evolve_data.txt  1733913887_evolve_tree.txt  1_GTR_kfold_col_evolve_config.xml  1_GTR_kfold_pos_evolve_config.xml  1_HKY85_kfold.pos_evolve_config.xml  1_K80_kfold.col_evolve_config.xml  1_evolve_data.txt  1_evolve_tree.txt  1_k80_kfold.col_phyml_stats_k80_kfold.col.txt  1_k80_kfold.pos_phyml_stats_k80_kfold.pos.txt  1_k80_kfold.pos_phyml_tree_k80_kfold.pos.txt  1_sim_ibm_config.xml  1_sim_iou_config.xml  (+187 more)
src/.deps/: alrt.Po  ancestral.Po  avx.Po  bionj.Po  cl.Po  cv.Po  date.Po  draw.Po  eigen.Po  evolve.Po  free.Po  help.Po  init.Po  interface.Po  io.Po  lk.Po  m4.Po  main.Po  make.Po  mcmc.Po  mg.Po  mixt.Po  models.Po  nexus.Po  optimiz.Po  pars.Po  rates.Po  simu.Po  spr.Po  sse.Po  stats.Po  tbe.Po  times.Po  utilities.Po  xml.Po
src/GTR/: 0_GTR_maxfold_evolve_config.xml  0_JC69_maxfold_evolve_config.xml  0_evolve_data.txt  0_evolve_tree.txt  10_GTR_kfold.col_evolve_config.xml  10_HKY85_kfold.col_evolve_config.xml  10_JC69_kfold.col_evolve_config.xml  10_JC69_kfold.pos_evolve_config.xml  10_JC69_maxfold_evolve_config.xml  10_K80_kfold.pos_evolve_config.xml  10_evolve_data.txt  10_evolve_stats.txt  10_evolve_tree.txt  11_GTR_kfold.pos_evolve_config.xml  11_HKY85_kfold.pos_evolve_config.xml  11_JC69_maxfold_evolve_config.xml  11_evolve_stats.txt  11_evolve_tree.txt  12_HKY85_kfold.pos_evolve_config.xml  12_HKY85_maxfold_evolve_config.xml  12_JC69_kfold.col_evolve_config.xml  12_JC69_maxfold_evolve_config.xml  12_K80_kfold.col_evolve_config.xml  12_evolve_stats.txt  13_GTR_kfold.col_evolve_config.xml  13_GTR_maxfold_evolve_config.xml  13_JC69_kfold.col_evolve_config.xml  13_JC69_kfold.pos_evolve_config.xml  13_K80_kfold.col_evolve_config.xml  14_GTR_kfold.col_evolve_config.xml  14_HKY85_kfold.col_evolve_config.xml  14_JC69_kfold.col_evolve_config.xml  14_K80_kfold.col_evolve_config.xml  14_K80_maxfold_evolve_config.xml  14_evolve_data.txt  14_evolve_tree.txt  15_GTR_kfold.col_evolve_config.xml  15_GTR_maxfold_evolve_config.xml  15_JC69_kfold.pos_evolve_config.xml  15_evolve_data.txt  (+470 more)
src/HKY85/: 0_HKY85_kfold.col_evolve_config.xml  0_K80_kfold.col_evolve_config.xml  0_evolve_stats.txt  10_HKY85_kfold.pos_evolve_config.xml  10_HKY85_maxfold_evolve_config.xml  10_K80_maxfold_evolve_config.xml  11_HKY85_maxfold_evolve_config.xml  11_evolve_data.txt  12_JC69_kfold.pos_evolve_config.xml  12_K80_kfold.pos_evolve_config.xml  12_evolve_data.txt  12_evolve_tree.txt  13_GTR_kfold.pos_evolve_config.xml  13_HKY85_kfold.col_evolve_config.xml  13_HKY85_maxfold_evolve_config.xml  13_evolve_data.txt  13_evolve_stats.txt  13_evolve_tree.txt  14_HKY85_kfold.pos_evolve_config.xml  14_HKY85_maxfold_evolve_config.xml  14_evolve_stats.txt  15_GTR_kfold.pos_evolve_config.xml  15_HKY85_kfold.col_evolve_config.xml  15_evolve_stats.txt  15_evolve_tree.txt  16_GTR_kfold.col_evolve_config.xml  16_GTR_maxfold_evolve_config.xml  16_K80_kfold.col_evolve_config.xml  16_evolve_data.txt  16_evolve_stats.txt  17_GTR_maxfold_evolve_config.xml  17_HKY85_kfold.pos_evolve_config.xml  17_JC69_maxfold_evolve_config.xml  17_K80_kfold.pos_evolve_config.xml  17_evolve_stats.txt  18_HKY85_kfold.pos_evolve_config.xml  18_K80_kfold.col_evolve_config.xml  18_evolve_stats.txt  19_GTR_maxfold_evolve_config.xml  19_JC69_kfold.col_evolve_config.xml  (+451 more)
src/JC69/: 0_GTR_kfold.pos_evolve_config.xml  0_HKY85_kfold.pos_evolve_config.xml  0_HKY85_maxfold_evolve_config.xml  0_JC69_kfold.col_evolve_config.xml  0_JC69_kfold.pos_evolve_config.xml  0_K80_maxfold_evolve_config.xml  0_evolve_data.txt  0_evolve_stats.txt  0_evolve_tree.txt  10_GTR_kfold.pos_evolve_config.xml  10_GTR_maxfold_evolve_config.xml  10_K80_kfold.col_evolve_config.xml  10_evolve_data.txt  10_evolve_stats.txt  (+572 more)
(+714 files in other folders)
